35. Search Insert Position

--- a/Leet Code/index.html
+++ b/Leet Code/index.html
@@ -7,6 +7,6 @@
   <title>LeetCode</title>
 </head>
 <body>
-  <script src="./268. Missing Number.js"></script>
+  <script src="./35. Search Insert Position.js"></script>
 </body>
 </html>
