374. Guess Number Higher or Lower

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
 
 
-  <script src="./Shorting/bubbleShort.js"></script>
+  <script src="./Leet Code/162. Find Peak Element.js"></script>
 </body>
 </html>
